--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "license": "Apache-2.0",
   "repository": "git://github.com/GitbookIO/slate-edit-list.git",
   "main": "./dist/index.js",
-  "peerDependencies": {
-    "immutable": "^3.8.2",
-    "@gitbook/slate": "^0.34.7"
-  },
   "files": [
     "dist",
     "*.md"
   ],
+  "dependencies": {
+    "slate": "^0.44.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -44,10 +43,10 @@
     "prettier": "^1.13.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "@gitbook/slate": "^0.34.7",
+    "slate": "^0.44.0",
     "slate-hyperprint": "^2.2.4",
-    "@gitbook/slate-hyperscript": "^0.5.22",
-    "@gitbook/slate-react": "^0.13.4",
+    "slate-hyperscript": "^0.11.0",
+    "slate-react": "^0.21.0",
     "stringify": "^5.1.0"
   },
   "scripts": {
